argocd/media-server/bazarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
            - name: DOCKER_MODS
              value: harbor.yanello.net/docker/wayller/bazarr-mod-subsync:latest
          image: harbor.yanello.net/lscr/linuxserver/bazarr:1.6.1@sha256:d24bd0048c759a468970989e9df11a6b96a7628d556d00f923e60a35ba59237b
          imagePullPolicy: IfNotPresent
          name: bazarr
          resources:
            limits:
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 400Mi
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /data/media/Movies
              name: movies
            - mountPath: /data/media/TV
              name: tv
            - mountPath: /config
              name: data
          startupProbe:
            httpGet:
              path: /
              port: 6767
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 6767
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: movies
          hostPath:
            path: /data/media/Movies
        - name: tv
          hostPath:
            path: /data/media/TV
        - name: data
          persistentVolumeClaim:
            claimName: data
