argocd/media-server/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr
spec:
  ports:
    - name: http
      port: 6767
      targetPort: 6767
  selector:
    app: bazarr
