argocd/media-server/bazarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bazarr
    gethomepage.dev/icon: bazarr
    gethomepage.dev/description: "Bazarr is a companion application to Sonarr and Radarr that manages and downloads subtitles based on your requirements."
    gethomepage.dev/pod-selector: app=bazarr
  labels:
    app.kubernetes.io/instance: bazarr-app
  name: bazarr-httproute
  namespace: bazarr
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - bazarr.yanello.net
  rules:
    - backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
